zeta-code/tui/src/app/fullscreen/snapshots/zeta_tui__app__fullscreen__tests__model_tab_bar_focused.snap
---
source: zeta-code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 18)"
---
  ≡ .                                                                                               
                                                                                                    
            ┌── Model ────────────────────────────────────────────────────────────[X]─┐             
            │                                                                         │             
            │   Favorites    My gateway                                               │             
            │                                                                         │             
            │  gateway-model                                                          │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ╭─────────│                                                                         │──────────╮  
  │ > Build │  Tab/Shift+Tab to switch · Enter to return · Esc to close               │          │  
  ╰─────────└─────────────────────────────────────────────────────────────────────────┘ic model ─╯
