zeta-code/tui/src/app/fullscreen/snapshots/zeta_tui__app__fullscreen__tests__persistent_queue.snap
---
source: zeta-code/tui/src/app/fullscreen/frame_tests.rs
assertion_line: 2227
expression: "render(&app, 80, 20)"
---
  Home  .                                                                       
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  Queue 1: Run the focused tests · next                                         
  Queue 2: Review the result · paused                                           
⠋ Starting · 0m 00s total                                                       
                                                                                
  ╭────────────────────────────────────────────────────────────────────────────╮
> │                                                                            │
  ╰────────────────────────────────────────────────────────── Automatic model ─╯
                                                                                
  ⏸ ask permissions on                                                          
  Enter send  ·  shift+tab permissions  ·  /home
