zeta-code/tui/src/app/fullscreen/snapshots/zeta_tui__app__fullscreen__tests__short_provider_modal_api_key.snap
---
source: zeta-code/tui/src/app/fullscreen/frame_tests.rs
expression: next
---
  Home  .                                                                                           
                                                                                                    
            ┌── Custom provider ──────────────────────────────────────────────────[×]─┐             
            │                                                                         │             
            │  Base URL                                                               │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ https://example.com/v1                                             │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │> API key                                                                │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ API key (optional)                                                 │ │             
  ╭─────────│  ╰────────────────────────────────────────────────────────────────────╯ │────────────╮
> │         │                                                                         │            │
  ╰─────────│  Enter to edit  ·  Tab/Shift+Tab to move  ·  Esc to return              │atic model ─╯
            └─────────────────────────────────────────────────────────────────────────┘
