zeta-code/tui/src/app/fullscreen/snapshots/zeta_tui__app__fullscreen__tests__short_provider_panel.snap
---
source: zeta-code/tui/src/app/fullscreen/frame_tests.rs
expression: output
---
  Home  .                                                                                           
                                                                                                    
            ┌── Custom provider ──────────────────────────────────────────────────[×]─┐             
            │                                                                         │             
            │  Provider name                                                          │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Provider name                                                      │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │> Base URL                                                               │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ https://example.com/v1                                             │ │             
  ╭─────────│  ╰────────────────────────────────────────────────────────────────────╯ │────────────╮
> │         │                                                                         │            │
  ╰─────────│  Enter to edit  ·  Tab/Shift+Tab to move  ·  Esc to return              │atic model ─╯
            └─────────────────────────────────────────────────────────────────────────┘
