zeta-code/tui/src/app/fullscreen/snapshots/zeta_tui__app__fullscreen__tests__slash_popup_clears_covered_transcript_rows_edge_to_edge.snap
---
source: zeta-code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, terminal_area.width, terminal_area.height)"
---
  Home  .                                                                       
                                                                                
content underlying transcript content underlying transcript content             
                                                                                
● Model invocation failed 9 underlying transcript content underlying transcript 
content underlying transcript content underlying transcript content             
                                                                                
● Model invocation failed 10 underlying transcript content underlying transcript
  /status                    show the active session, thread, and model         
  /statusline                choose the items shown in the status line          
  /skills                    browse configured skill sources                    
  /mcp                       list configured MCP tools                          
  /resume                    list or resume a saved session                     
  /archive                   archive the current session and start a new chat   
  ╭────────────────────────────────────────────────────────────────────────────╮
> │/                                                                           │
  ╰────────────────────────────────────────────────────────── Automatic model ─╯
                                                                                
  ⏸ ask permissions on                                                          
  Enter send  ·  shift+tab permissions  ·  /home
