zeta-code/tui/src/app/fullscreen/snapshots/zeta_tui__app__fullscreen__tests__status_indicator_with_notice.snap
---
source: zeta-code/tui/src/app/fullscreen/frame_tests.rs
assertion_line: 2038
expression: working
---
                                                                                
    ▄  ▄     Zeta Code v0.1.0                                                   
  ▗█▛██▜█▖   Automatic model · Access unknown                                   
  ▝▜████▛▘   .                                                                  
    ▝  ▘                                                                        
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
⠋ Working · 0m 00s total · ctrl+c to interrupt                                  
                                                               Copied 42 chars  
────────────────────────────────────────────────────────────────────────────────
>                                                                               
────────────────────────────────────────────────────────────────────────────────
                                                                                
  ⏸ ask permissions on
