zeta-code/tui/src/app/fullscreen/snapshots/zeta_tui__app__fullscreen__tests__transcript_jump_to_bottom.snap
---
source: zeta-code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 50, 16)"
---
  ≡ .                                             
                                                  
● Model invocation failed 2                       
                                                  
● Model invocation failed 3                       
                                                  
● Model invocation failed 4                       
                                                  
● Model invocation failed 5                       
             Jump to bottom (click) ↓             
                                                  
  ╭────────────────────────────────────────────╮  
  │ >                                          │  
  ╰────────────────────────── Automatic model ─╯  
                                                  
  Enter send                ⏸ ask permissions on
