zeta-code/tui/src/app/fullscreen/snapshots/zeta_tui__app__fullscreen__tests__transcript_scrolled_to_first_message.snap
---
source: zeta-code/tui/src/app/fullscreen/frame_tests.rs
expression: scrolled_to_start
---
  ≡ /work/zeta                                                                  
                                                                                
● Conversation started.                                                         
                                                                                
● Model invocation failed 0                                                     
                                                                                
● Model invocation failed 1                                                     
                                                                                
● Model invocation failed 2                                                     
                                                                                
● Model invocation failed 3                                                     
                                                                                
● Model invocation failed 4                                                     
                            Jump to bottom (click) ↓                            
  ⏸ ask permissions on                                                          
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │ >                                                                        │  
  ╰──────────────────────────────────────────────────────── Automatic model ─╯  
                                                                                
  Enter send  ·  shift+tab permissions  ·  /home
